--- a/Documentation/magit.org
+++ b/Documentation/magit.org
@@ -299,7 +299,7 @@ origin/master", "Unpushed to origin/master", and many others.
 
 Since we are starting from a safe state, which you can easily return
 to (by doing a ~git reset --hard PRE-MAGIT-STATE~), there currently are
-not staged or unstaged changes.  Edit some files and save the changes.
+no staged or unstaged changes.  Edit some files and save the changes.
 Then go back to the status buffer, while at the same time refreshing
 it, by typing ~C-x g~.  (When the status buffer, or any Magit buffer for
 that matter, is the current buffer, then you can also use just ~g~ to
@@ -6742,7 +6742,7 @@ This section discusses various variables that you might want to
 change (or *not* change) for safety reasons.
 
 Git keeps *committed* changes around long enough for users to recover
-changes they have accidentally been deleted.  It does not do the same
+changes that have accidentally been deleted.  It does not do the same
 for *uncommitted* changes in the working tree and not even the index
 (the staging area).  Because Magit makes it so easy to modify
 uncommitted changes, it also makes it easy to shoot yourself in the
@@ -6811,7 +6811,7 @@ should help.
 
 #+BEGIN_SRC emacs-lisp
   (setq auto-revert-buffer-list-filter
-        'magit-auto-revert-repository-buffers-p)
+        'magit-auto-revert-repository-buffer-p)
 #+END_SRC
 
 For alternative approaches see [[*Automatic Reverting of File-Visiting
